# forecast_arb

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE_MODES.md  BROKER_DRIFT_V22_README.md  CAMPAIGN_GRID_SNAPSHOT_FIX.md  CAMPAIGN_ISOLATION_AUDIT.md  CAMPAIGN_VISIBILITY_PATCH.md  CAVEAT_FIXES.md  CRASH_VENTURE_V1_README.md  CRASH_VENTURE_V2_README.md  DAILY_CONSOLE_README.md  DAILY_PROBABILITY_DISPLAY_ENHANCEMENT.md  DAILY_WORKFLOW_GUIDE.md  EDGE_GATING_INTEGRATION_COMPLETE.md  EXECUTION_LEDGER_PATCH.md  EXECUTION_REFACTOR_README.md  EXECUTION_VERIFICATION_HARNESS.md  EXPIRY_SELECTION_REPRESENTABILITY_FIX.md  FIX_3_UNKNOWN_CONTRACTS.md  HARDENING_PASS_SUMMARY.md  IBKR_BROKER_STATE_SYNC_PATCH.md  IBKR_CONNECTION_TIMEOUT_FIX.md  IBKR_TAIL_STRIKES_README.md  INTENT_CREATION_PIPELINE_FIX.md  INTENT_EMISSION_V2_COMPLETE.md  KALSHI_AUTO_MAPPING_README.md  KALSHI_MATCHING_TOLERANCE_UPDATE.md  KALSHI_MULTI_SERIES_README.md  KALSHI_PROBABILITY_METADATA_FIX.md  KALSHI_QQQ_CONSISTENCY_PATCH.md  KALSHI_SERIES_COVERAGE_COMPLETE.md  KALSHI_STATUS_FIX_COMPLETE.md  KALSHI_STATUS_MAPPING_FIX.md  KALSHI_THRESHOLD_PARSING_FIX.md  LEDGER_SEMANTICS_FIX.md  MONEYNESS_MISMATCH_FIX.md  OPERATOR_ENTRYPOINTS_FIX.md  PATCH_NOTES.md  PATCH_SUMMARY.md  (+64 more)
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
configs/: allocator_ccc_v1.yaml  campaign_b.yaml  campaign_v1.yaml  structuring_crash_venture_v1.yaml  structuring_crash_venture_v1_1.yaml  structuring_crash_venture_v2.yaml  test_structuring_crash_venture_v1.yaml
docs/: DUPLICATE_INVENTORY.md  (+1 more)
(+244 files in other folders)
